Entry box now accepts multiple lines, scrolls when it goes over, and submits on enter.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@ body {
   align-items: center;
 }
 
+#formText {
+  word-wrap: break-word;
+  word-break: break-word;
+  max-height: 100px;
+  background-color: lightgrey;
+  border: none;
+  outline: none;
+  overflow-y: scroll;
+}
+
 #mainElements {
   width: 480px;
 }
