--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@ body {
 #formText {
   word-wrap: break-word;
   word-break: break-word;
+  min-height: 100px;
   max-height: 100px;
   background-color: lightgrey;
   border: none;
   outline: none;
+  resize: none;
   overflow-y: scroll;
 }
 
