--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+
 }
 
 #formText {
@@ -17,9 +15,32 @@ body {
 }
 
 #mainElements {
-  width: 480px;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  /*width: 480px;*/
 }
 
 .container {
   display: flex;
+}
+
+.background_blue {
+  background-color: blue;
+}
+
+.background_red {
+  background-color: red;
+}
+
+.background_yellow {
+  background-color: yellow;
+}
+
+.background_green {
+  background-color: green;
+}
+
+.background_white {
+  background-color: white;
 }
