--- a/style.css
+++ b/style.css
@@ -15,14 +15,74 @@ body {
 }
 
 #mainElements {
+  width: 660px;
+  height: 660px;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  /*width: 480px;*/
+}
+
+#stage {
+  position: relative;
+  margin: 1em auto;
+  width: 660px;
+  height: 660px;
+  border: 2px solid #666;
+  background: white;
+}
+
+#traveler {
+  position: absolute;
+  width: 260px;
+  height: 140px;
+  border: 2px solid #666;
+
+  animation-name: travel;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 4.8s;
+
+  animation-name: travel;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 4.8s;
+}
+
+#bouncer {
+  position: relative;
+  width: 260px;
+  height: 140px;
+  border: 2px solid #666;
+
+  animation-name: bounce;
+  animation-iteration-count: infinite;
+  animation-duration: 4.2s;
+
+  animation-name: bounce;
+  animation-iteration-count: infinite;
+  animation-duration: 4.2s;
+}
+
+@keyframes travel {
+  from { left: 0px; } to { left: 640px; }
+}
+
+@keyframes bounce {
+  from, to  {
+    bottom: 0px;
+    animation-timing-function: linear;
+  }
+  50% {
+    bottom: 640px;
+    animation-timing-function: linear;
+  }
 }
 
 .container {
   display: flex;
+  border: 1px dashed #666;
 }
 
 .background_blue {
