--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body {
 }
 
 #bouncer {
+  pointer-events: none;
   position: relative;
   width: 260px;
   height: 140px;
@@ -101,6 +102,7 @@ body {
 /*zoomIn animation begin. zoomIn shamelessly adapted from animate.css. See animate.css file for credits*/
 
 .zoomIn {
+  pointer-events: none;
   position: fixed;
   animation-name: zoomIn;
   animation-duration: 1s;
@@ -142,6 +144,7 @@ body {
 /*begin surfer*/
 
 .surf {
+  pointer-events: none;
   border: 1px dashed #666;
   position: absolute;
   animation-name: surfer;
