--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   position: absolute;
   margin: auto;
   padding-left: 312px;
+  padding-top: 20px;
   width: 660px;
   height: 660px;
   border: 2px solid #666;
@@ -30,6 +31,7 @@ body {
   border: 1px solid red;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   height: 410px;
   width: 660px;
 }
@@ -54,8 +56,15 @@ body {
 
 #minionSpeech {
   position: relative;
+  padding-left: 150px;
+  padding-top: 70px;
+  font-family: 'Fontdiner Swanky', cursive;
 }
 
+#textBlock {
+  font-family: 'Fontdiner Swanky', cursive;
+  font-size: 20px;
+}
 
 /*.textBox {
   flex-direction: column-reverse;
@@ -76,13 +85,13 @@ body {
   overflow-y: scroll;
 }
 
-#mainElements {
+/*#mainElements {
   width: 660px;
   height: 660px;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-}
+}*/
 
 
 /*bounce animation begin*/
@@ -364,3 +373,17 @@ body {
   0%, 100% {
     transform: translate(0, 0) rotate(0); }
   }
+
+/*color change*/
+
+.rainbow {
+  animation: colorchange 20s infinite;
+}
+
+@keyframes colorchange {
+  0%   {color: red;}
+  25%  {color: yellow;}
+  50%  {color: blue;}
+  75%  {color: green;}
+  100% {color: red;}
+}
