--- a/style.css
+++ b/style.css
@@ -64,14 +64,11 @@ body {
 #textBlock {
   font-family: 'Fontdiner Swanky', cursive;
   font-size: 20px;
+  /*-webkit-user-select: none;*/
+  /*-moz-user-select: none;*/
+  /*-ms-user-select: none;*/
+  /*user-select: none;     */
 }
-
-/*.textBox {
-  flex-direction: column-reverse;
-  align-content: center;
-  position: relative;
-}*/
-
 
 #formText {
   word-wrap: break-word;
@@ -85,14 +82,9 @@ body {
   overflow-y: scroll;
 }
 
-/*#mainElements {
-  width: 660px;
-  height: 660px;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}*/
-
+#surfAttack {
+  width: 347px;
+}
 
 /*bounce animation begin*/
 
