--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-
 }
 
 .container {
@@ -8,6 +7,7 @@ body {
 }
 
 .stage {
+  /*background-image: url("images/castle-gate.jpeg");*/
   position: absolute;
   margin: auto;
   padding-left: 312px;
