--- a/style.css
+++ b/style.css
@@ -155,28 +155,28 @@ body {
     opacity: 1;
     -webkit-transform: scale3d(.3, .3, .3);
     transform: scale3d(.3, .3, .3);
-    height: 100%;
-    width: 100%;
+    height: 0px;
+    width: 0px;
   }
   25% {
     opacity: 0.75;
-    height: 150%;
-    width: 150%;
+    height: 165px;
+    width: 165px;
   }
   50% {
     opacity: 0.5;
-    height: 200%;
-    width: 200%;
+    height: 330px;
+    width: 330px;
   }
   75% {
     opacity: 0.25;
-    height: 250%;
-    width: 250%;
+    height: 495px;
+    width: 495px;
   }
   100% {
     opacity: 0;
-    height: 300%;
-    width: 300%;
+    height: 660px;
+    width: 660px;
   }
 }
 
@@ -371,13 +371,160 @@ body {
 /*color change*/
 
 .rainbow {
-  animation: colorchange 20s infinite;
+  display:inline-block;
+  transform-origin:center center;
+  animation:rainbow 5s ease-in-out infinite;
 }
 
-@keyframes colorchange {
-  0%   {color: red;}
-  25%  {color: yellow;}
-  50%  {color: blue;}
-  75%  {color: green;}
-  100% {color: red;}
-}
+@keyframes rainbow {
+  2% {
+    transform: translate(0px, 4px) rotate(-0.5deg);
+    color: red; }
+  4% {
+    transform: translate(-3px, 9px) rotate(-0.5deg);
+    color: yellow; }
+  6% {
+    transform: translate(4px, 10px) rotate(-0.5deg);
+    color: blue; }
+  8% {
+    transform: translate(0px, -2px) rotate(0.5deg);
+    color: green; }
+  10% {
+    transform: translate(9px, -9px) rotate(1.5deg);
+    color: red; }
+  12% {
+    transform: translate(-9px, 9px) rotate(1.5deg);
+    color: yellow; }
+  14% {
+    transform: translate(10px, -1px) rotate(-0.5deg);
+    color: blue; }
+  16% {
+    transform: translate(7px, -1px) rotate(0.5deg);
+    color: yellow; }
+  18% {
+    transform: translate(-8px, 8px) rotate(1.5deg);
+    color: red; }
+  20% {
+    transform: translate(1px, -9px) rotate(0.5deg);
+    color: blue; }
+  22% {
+    transform: translate(7px, -6px) rotate(0.5deg);
+    color: green; }
+  24% {
+    transform: translate(-8px, -4px) rotate(-1.5deg);
+    color: blue; }
+  26% {
+    transform: translate(-9px, 5px) rotate(-1.5deg);
+    color: yellow; }
+  28% {
+    transform: translate(7px, 3px) rotate(-1.5deg);
+    color: red; }
+  30% {
+    transform: translate(9px, 3px) rotate(2.5deg);
+    color: green; }
+  32% {
+    transform: translate(2px, -6px) rotate(-1.5deg);
+    color: blue; }
+  34% {
+    transform: translate(10px, -7px) rotate(2.5deg);
+    color: yellow; }
+  36% {
+    transform: translate(-2px, 10px) rotate(-2.5deg);
+    color: red; }
+  38% {
+    transform: translate(-6px, -8px) rotate(-1.5deg);
+    color: green; }
+  40% {
+    transform: translate(1px, 0px) rotate(-2.5deg);
+    color: blue; }
+  42% {
+    transform: translate(10px, 8px) rotate(3.5deg);
+    color: yellow; }
+  44% {
+    transform: translate(4px, 2px) rotate(2.5deg);
+    color: red; }
+  46% {
+    transform: translate(10px, -2px) rotate(-1.5deg);
+    color: green; }
+  48% {
+    transform: translate(10px, 0px) rotate(-2.5deg);
+    color: blue; }
+  50% {
+    transform: translate(-2px, 5px) rotate(-0.5deg);
+    color: yellow; }
+  52% {
+    transform: translate(4px, 1px) rotate(3.5deg);
+    color: red; }
+  54% {
+    transform: translate(-8px, -5px) rotate(2.5deg);
+    color: green; }
+  56% {
+    transform: translate(8px, -8px) rotate(2.5deg);
+    color: blue; }
+  58% {
+    transform: translate(-3px, -6px) rotate(1.5deg);
+    color: yellow; }
+  60% {
+    transform: translate(-3px, -5px) rotate(0.5deg);
+    color: red; }
+  62% {
+    transform: translate(-1px, 0px) rotate(-0.5deg);
+    color: green; }
+  64% {
+    transform: translate(2px, 10px) rotate(3.5deg);
+    color: blue; }
+  66% {
+    transform: translate(-4px, -1px) rotate(-0.5deg);
+    color: yellow; }
+  68% {
+    transform: translate(8px, -5px) rotate(1.5deg);
+    color: red; }
+  70% {
+    transform: translate(-3px, 2px) rotate(-1.5deg);
+    color: green; }
+  72% {
+    transform: translate(9px, -3px) rotate(-0.5deg);
+    color: blue; }
+  74% {
+    transform: translate(-2px, 6px) rotate(1.5deg);
+    color: yellow; }
+  76% {
+    transform: translate(-7px, -8px) rotate(-1.5deg);
+    color: red; }
+  78% {
+    transform: translate(7px, -4px) rotate(0.5deg);
+    color: green; }
+  80% {
+    transform: translate(-4px, -5px) rotate(-1.5deg);
+    color: blue; }
+  82% {
+    transform: translate(8px, 6px) rotate(3.5deg);
+    color: yellow; }
+  84% {
+    transform: translate(0px, -7px) rotate(-1.5deg);
+    color: red; }
+  86% {
+    transform: translate(0px, 1px) rotate(3.5deg);
+    color: green; }
+  88% {
+    transform: translate(-6px, -3px) rotate(2.5deg);
+    color: blue; }
+  90% {
+    transform: translate(1px, 3px) rotate(-0.5deg);
+    color: yellow; }
+  92% {
+    transform: translate(-9px, -4px) rotate(-2.5deg);
+    color: red; }
+  94% {
+    transform: translate(-7px, -6px) rotate(2.5deg);
+    color: green; }
+  96% {
+    transform: translate(5px, -3px) rotate(-1.5deg);
+    color: blue; }
+  98% {
+    transform: translate(8px, 4px) rotate(0.5deg);
+    color: yellow; }
+  0%, 100% {
+    transform: translate(0, 0) rotate(0);
+    color: red; }
+  }
