--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
 #textBlock {
   font-family: 'Fontdiner Swanky', cursive;
   font-size: 20px;
+  padding-top: 20px;
   /*-webkit-user-select: none;*/
   /*-moz-user-select: none;*/
   /*-ms-user-select: none;*/
