--- a/style.css
+++ b/style.css
@@ -65,10 +65,10 @@ body {
   font-family: 'Fontdiner Swanky', cursive;
   font-size: 20px;
   padding-top: 20px;
-  /*-webkit-user-select: none;*/
-  /*-moz-user-select: none;*/
-  /*-ms-user-select: none;*/
-  /*user-select: none;     */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #buttonActual {
@@ -100,6 +100,10 @@ body {
   outline: none;
   resize: none;
   overflow-y: scroll;
+}
+
+#credits {
+  font-size: 14px;
 }
 
 #surfAttack {
